--- a/reflection.qmd
+++ b/reflection.qmd
@@ -1,12 +1,6 @@
----
-title: "Reflection on the Use of GenAI"
----
-
 # Reflection on the Use of GenAI
 
-In completing this assessment, I utilized **ChatGPT**, a generative AI tool developed by OpenAI. This tool was instrumental in helping me structure and refine my Quarto project, offering step-by-step guidance, improving content formatting, and suggesting enhancements for a better user experience. Its ability to simplify complex tasks, such as YAML configuration and styling, made the process more efficient and less intimidating.
-
-The benefits of using GenAI include its ability to generate tailored solutions, provide instant feedback, and streamline workflows. However, I found it challenging to communicate very specific needs at times, which occasionally led to suggestions that required further refinement to align with my vision. Overall, I believe GenAI is an excellent companion for technical and creative projects, provided users approach it critically and iteratively to get the best results.
+Initially, I didn’t realize that there was a full step-by-step lab guide available. I mistakenly assumed that the slides were the only resource and that I had to figure out the entire lab process on my own. As a result, I proceeded to complete the lab manually, skipping the generated files. Despite everything being built, deployed, and rendered, the website still didn’t display the output as expected. Feeling stuck, I approached the professor's lab for help, but upon reflection, I realized that I had missed a critical step. I needed to redo the entire lab from the beginning, using the provided instructions. This oversight caused me to submit the assignment later than intended. While the experience was frustrating, it taught me the importance of fully reviewing available resources and instructions before diving into tasks. It also highlighted how small mistakes can lead to bigger delays in the learning process.
 
 ---
 
